[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/prideAmal.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/prideAmalgamation/state_pursue.png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/prideAmalgamation/state_flee.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/prideAmalgamation/state_charge.png" type="Texture" id=4]
[ext_resource path="res://assets/enemies/prideAmalgamation/state_attack.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "pursue",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "flee",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "charge",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 25, 50 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 23, 48 )

[node name="prideAmal" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 5
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 2 )

[node name="hitbox" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox" index="0"]

shape = SubResource( 3 )

[node name="WallDetector" type="RayCast2D" parent="." index="3"]

enabled = false
exclude_parent = true
cast_to = Vector2( 35, 0 )
collision_mask = 4

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = true

[node name="FleeTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="SwitchTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="FleeTimer" to="." method="_on_FleeTimer_timeout"]

[connection signal="timeout" from="SwitchTimer" to="." method="_on_SwitchTimer_timeout"]


